--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-fabric8-wit",
-  "version": "0.0.1",
+  "version": "0.0.0-development",
   "description": "Common services for working with Fabric8 Work Item Tracker",
   "main": "bundles/login.umd.js",
   "module": "index.js",
