--- a/package.json
+++ b/package.json
@@ -104,5 +104,8 @@
     "webpack-validator": "2.1.3",
     "uglify-js": "^2.7.5",
     "semantic-release": "^6.3.2"
+  },
+  "release": {
+    "verifyConditions": {}
   }
 }
