--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "reinstall": "npm run clean && npm install",
     "remove-dist": "rimraf dist",
     "rimraf": "rimraf",
+    "test:unit": "karma start",
     "transpile": "./node_modules/.bin/ngc",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
@@ -62,7 +63,9 @@
     "node": ">= 6.9.1",
     "npm": ">= 3"
   },
-  "dependencies": {},
+  "dependencies": {
+    "ngx-login-client": "0.1.3"
+  },
   "peerDependencies": {
     "@angular/core": "^2.0.0",
     "@angular/http": "^2.0.0"
@@ -73,8 +76,11 @@
     "@angular/compiler-cli": "2.2.3",
     "@angular/core": "2.2.3",
     "@angular/http": "2.2.3",
+    "@angular/platform-browser": "2.2.3",
+    "@angular/platform-browser-dynamic": "2.2.3",
     "@angular/router": "3.2.3",
     "@krux/condition-jenkins": "^1.0.1",
+    "@types/jasmine": "2.5.35",
     "angular2-template-loader": "^0.4.0",
     "autoprefixer": "^6.3.7",
     "awesome-typescript-loader": "^2.2.4",
@@ -82,7 +88,20 @@
     "copyfiles": "^1.0.0",
     "core-js": "^2.4.1",
     "cpy-cli": "1.0.1",
+    "extract-text-webpack-plugin": "2.0.0-beta.1",
     "ghooks": "1.2.4",
+    "jasmine-core": "2.4.1",
+    "karma": "1.2.0",
+    "karma-chrome-launcher": "2.0.0",
+    "karma-cli": "1.0.1",
+    "karma-coverage": "1.1.1",
+    "karma-jasmine": "1.0.2",
+    "karma-jasmine-html-reporter": "0.2.2",
+    "karma-mocha-reporter": "2.0.0",
+    "karma-phantomjs-launcher": "1.0.2",
+    "karma-remap-coverage": "0.1.1",
+    "karma-sourcemap-loader": "0.3.7",
+    "karma-webpack": "1.8.0",
     "npm-run-all": "2.2.0",
     "opt-cli": "1.4.2",
     "reflect-metadata": "0.1.8",
@@ -90,6 +109,7 @@
     "rollup": "^0.37.0",
     "rxjs": "5.0.0-beta.12",
     "semantic-release": "^6.3.2",
+    "source-map-loader": "0.1.5",
     "ts-helpers": "1.1.1",
     "ts-loader": "0.8.1",
     "tslint": "^3.15.1",
