--- a/package.json
+++ b/package.json
@@ -64,11 +64,12 @@
     "npm": ">= 3"
   },
   "dependencies": {
-    "ngx-login-client": "0.1.3"
   },
   "peerDependencies": {
     "@angular/core": "^2.0.0",
-    "@angular/http": "^2.0.0"
+    "@angular/http": "^2.0.0",
+    "lodash": "4.17.2",
+    "ngx-login-client": "0.1.3"
   },
   "devDependencies": {
     "@angular/common": "2.2.3",
@@ -81,6 +82,7 @@
     "@angular/router": "3.2.3",
     "@krux/condition-jenkins": "^1.0.1",
     "@types/jasmine": "2.5.35",
+    "@types/lodash": "ts2.0",
     "angular2-template-loader": "^0.4.0",
     "autoprefixer": "^6.3.7",
     "awesome-typescript-loader": "^2.2.4",
