--- a/package.json
+++ b/package.json
@@ -64,12 +64,12 @@
     "npm": ">= 3"
   },
   "dependencies": {
+    "ngx-login-client": "0.1.3"
   },
   "peerDependencies": {
     "@angular/core": "^2.0.0",
     "@angular/http": "^2.0.0",
-    "lodash": "4.17.2",
-    "ngx-login-client": "0.1.3"
+    "lodash": "4.17.2"
   },
   "devDependencies": {
     "@angular/common": "2.2.3",
@@ -129,9 +129,9 @@
     "zone.js": "^0.6.26"
   },
   "release": {
-     "branch": "master",
-     "verifyConditions": {
-       "path": "./node_modules/@krux/condition-jenkins"
-     }
-   }
+    "branch": "master",
+    "verifyConditions": {
+      "path": "./node_modules/@krux/condition-jenkins"
+    }
+  }
 }
