Fix ngx-login-client dependency declaration.
ngx-login-client is now a dev dependency and declared as a peer.
Rollup config is modified to avoid confusion over UMD file name.
tsconfig is modified to locate ngx-login-client module,
as it is not under baseUrl.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
       "@angular/core": ["node_modules/@angular/core"],
       "@angular/http": ["node_modules/@angular/http"],
       "@angular/router": ["node_modules/@angular/router"],
+      "ngx-login-client": ["node_modules/ngx-login-client"],
       "rxjs/*": ["node_modules/rxjs/*"]
     },
     "lib": [
