--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ngx-fabric8-wit",
   "version": "0.0.0-development",
   "description": "Common services for working with Fabric8 Work Item Tracker",
-  "main": "bundles/login.umd.js",
+  "main": "bundles/ngx-fabric8-wit.umd.js",
   "module": "index.js",
   "typings": "index.d.ts",
   "scripts": {
@@ -11,7 +11,7 @@
     "clean": "npm cache clean && npm run rimraf -- node_modules doc coverage dist",
     "cleanup": "rimraf dist/package.json dist/bundles dist/src dist/index.d.ts dist/index.metadata.json dist/index.js dist/index.js.map dist/LICENSE dist/README.md",
     "copy-files": "copyfiles LICENSE README.md package.json dist",
-    "minify": "uglifyjs dist/bundles/login.umd.js --screw-ie8 --compress --mangle --comments --output dist/bundles/login.umd.min.js",
+    "minify": "uglifyjs dist/bundles/ngx-fabric8-wit.umd.js --screw-ie8 --compress --mangle --comments --output dist/bundles/ngx-fabric8-wit.umd.js",
     "reinstall": "npm run clean && npm install",
     "remove-dist": "rimraf dist",
     "rimraf": "rimraf",
@@ -64,12 +64,12 @@
     "npm": ">= 3"
   },
   "dependencies": {
-    "ngx-login-client": "0.1.3"
   },
   "peerDependencies": {
     "@angular/core": "^2.0.0",
     "@angular/http": "^2.0.0",
-    "lodash": "4.17.2"
+    "lodash": "4.17.2",
+    "ngx-login-client": "0.1.3"
   },
   "devDependencies": {
     "@angular/common": "2.2.3",
@@ -104,6 +104,7 @@
     "karma-remap-coverage": "0.1.1",
     "karma-sourcemap-loader": "0.3.7",
     "karma-webpack": "1.8.0",
+    "ngx-login-client": "0.1.3",
     "npm-run-all": "2.2.0",
     "opt-cli": "1.4.2",
     "reflect-metadata": "0.1.8",
@@ -117,7 +118,7 @@
     "tslint": "^3.15.1",
     "tslint-loader": "2.1.5",
     "typedoc": "^0.5.1",
-    "typescript": "^2.0.3",
+    "typescript": "2.0.8",
     "uglify-js": "^2.7.5",
     "webpack": "2.1.0-beta.22",
     "webpack-dashboard": "^0.2.0",
