--- a/package.json
+++ b/package.json
@@ -51,13 +51,13 @@
     "ng-login",
     "auth"
   ],
-  "homepage": "https://github.com/fabric8io/ng-login",
+  "homepage": "https://github.com/fabric8io/ngx-fabric8-wit",
   "repository": {
     "type": "git",
-    "url": "https://github.com/fabric8io/ng-login.git"
+    "url": "https://github.com/fabric8io/ngx-fabric8-wit.git"
   },
   "bugs": {
-    "url": "https://github.com/fabric8io/ng-login/issues"
+    "url": "https://github.com/fabric8io/ngx-fabric8-wit/issues"
   },
   "engines": {
     "node": ">= 6.9.1",
