docs: Clean up contributors

--- a/package.json
+++ b/package.json
@@ -27,16 +27,12 @@
       "email": "josh@redhat.com"
     },
     {
-      "name": "Nimisha",
-      "email": "nmukherj@redhat.com"
-    },
-    {
-      "name": "Sudipta Sen",
-      "email": "sudsen@redhat.com"
-    },
-    {
       "name": "Pete Muir",
       "email": "pmuir@bleepbleep.org.uk"
+    },
+    {
+      "name": "Vineet Reynolds Pereira",
+      "email": "Vineet.Reynolds@gmail.com"
     }
   ],
   "keywords": [
