--- a/package.json
+++ b/package.json
@@ -6,19 +6,27 @@
   "module": "index.js",
   "typings": "index.d.ts",
   "scripts": {
-    "build": "npm run remove-dist && npm run transpile && npm run bundle && npm run minify && npm run copy-files",
-    "bundle": "rollup -c",
-    "clean": "npm cache clean && npm run rimraf -- node_modules doc coverage dist",
+    "build": "npm-run-all remove-dist transpile bundle-rollup minify  copy-files",
+    "build:components": "npm-run-all remove-dist bundle minify prebuild:add-require transpile-sass transpile copy-files postbuild:remove-require",
+    "bundle": "webpack --config config/webpack.prod.js --progress --profile --bail",
+    "bundle-rollup": "rollup -c",
+    "clean": "npm cache clean && npm run rimraf -- node_modules doc coverage dist bundles",
     "cleanup": "rimraf dist/package.json dist/bundles dist/src dist/index.d.ts dist/index.metadata.json dist/index.js dist/index.js.map dist/LICENSE dist/README.md",
     "commitmsg": "validate-commit-msg",
-    "copy-files": "copyfiles LICENSE README.md package.json dist",
-    "minify": "uglifyjs dist/bundles/ngx-fabric8-wit.umd.js --screw-ie8 --compress --mangle --comments --output dist/bundles/ngx-fabric8-wit.umd.js",
+    "copy-files": "copyfiles LICENSE README.md package.json dist && copyfiles src/**/*.css dist && copyfiles src/**/**/*.css dist && copyfiles src/**/*.html dist && copyfiles src/**/**/*.html dist",
+    "copy-dist-files": "copyfiles LICENSE README.md package.json index.js dist",
+    "minify": "uglifyjs dist/bundles/ngx-fabric8-wit.js --screw-ie8 --compress --mangle --comments --output dist/bundles/ngx-fabric8-wit.min.js",
+    "prebuild:add-require": "gulp add-require-for-templates && gulp replace-html && gulp add-require-for-styles && gulp replace-scss",
+    "postbuild:remove-require": "gulp remove-require-for-templates && gulp replace-require-html && gulp remove-require-for-styles && gulp replace-require-scss",
     "reinstall": "npm run clean && npm install",
+    "remove-css": "gulp remove-css",
     "remove-dist": "rimraf dist",
     "rimraf": "rimraf",
-    "test:unit": "karma start",
+    "start": "webpack-dev-server --config config/webpack.demo.js --progress --host 0.0.0.0 --port 3001 --profile --watch --content-base src/",
+    "test": "karma start",
     "transpile": "./node_modules/.bin/ngc",
-    "semantic-release": "semantic-release pre && npm run build && cp -r .git dist && npm publish dist/ && semantic-release post"
+    "semantic-release": "semantic-release pre && npm run build && cp -r .git dist && npm publish dist/ && semantic-release post",
+    "transpile-sass": "gulp compile-sass"
   },
   "license": "Apache-2.0",
   "contributors": [
@@ -60,72 +68,136 @@
     "node": ">= 6.9.1",
     "npm": ">= 3"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@angular/core": "2.4.9",
+    "@angular/http": "2.4.9",
+    "lodash": "4.17.4",
+    "ngx-login-client": "0.1.8"
+  },
   "peerDependencies": {
-    "@angular/core": "^2.0.0",
-    "@angular/http": "^2.0.0",
-    "lodash": "4.17.2",
-    "ngx-login-client": "0.1.6"
   },
   "devDependencies": {
-    "@angular/common": "2.2.3",
-    "@angular/compiler": "2.2.3",
-    "@angular/compiler-cli": "2.2.3",
-    "@angular/core": "2.2.3",
-    "@angular/http": "2.2.3",
-    "@angular/platform-browser": "2.2.3",
-    "@angular/platform-browser-dynamic": "2.2.3",
-    "@angular/router": "3.2.3",
-    "@krux/condition-jenkins": "^1.0.1",
-    "@types/jasmine": "2.5.35",
-    "@types/lodash": "ts2.0",
-    "angular2-template-loader": "^0.4.0",
-    "autoprefixer": "^6.3.7",
-    "awesome-typescript-loader": "^2.2.4",
-    "codelyzer": "1.0.0-beta.3",
-    "copyfiles": "^1.0.0",
-    "core-js": "^2.4.1",
+    "@angular/common": "2.4.8",
+    "@angular/compiler": "2.4.8",
+    "@angular/compiler-cli": "2.4.8",
+    "@angular/core": "2.4.8",
+    "@angular/forms": "2.4.8",
+    "@angular/http": "2.4.8",
+    "@angular/platform-browser": "2.4.8",
+    "@angular/platform-browser-dynamic": "2.4.8",
+    "@angular/platform-server": "2.4.8",
+    "@angular/router": "3.4.8",
+    "@krux/condition-jenkins": "1.0.1",
+    "@types/jasmine": "2.5.43",
+    "@types/lodash": "4.14.54",
+    "angular2-load-children-loader": "0.1.3",
+    "angular2-router-loader": "0.3.5",
+    "angular2-template-loader": "0.6.2",
+    "angular2-tree-component": "2.8.2",
+    "assets-webpack-plugin": "3.5.1",
+    "autoprefixer": "6.7.6",
+    "awesome-typescript-loader": "3.0.8",
+    "child_process": "1.0.2",
+    "clean-css": "4.0.8",
+    "clean-webpack-plugin": "0.1.15",
+    "codelyzer": "3.0.0-beta.0",
+    "copy-webpack-plugin": "4.0.1",
+    "copyfiles": "1.2.0",
+    "core-js": "2.4.1",
     "cpy-cli": "1.0.1",
-    "cz-conventional-changelog": "^2.0.0",
-    "extract-text-webpack-plugin": "2.0.0-beta.1",
-    "husky": "^0.13.1",
-    "jasmine-core": "2.4.1",
-    "karma": "1.2.0",
+    "cz-conventional-changelog": "2.0.0",
+    "css-loader": "0.26.2",
+    "css-to-string-loader": "0.1.2",
+    "del": "2.2.2",
+    "exports-loader": "0.6.4",
+    "expose-loader": "0.7.3",
+    "extract-text-webpack-plugin": "2.0.0",
+    "file-loader": "0.10.1",
+    "gh-pages": "0.12.0",
+    "gulp": "3.9.1",
+    "gulp-concat": "2.6.1",
+    "gulp-inline-ng2-template": "4.0.0",
+    "gulp-install": "0.6.0",
+    "gulp-minify-css": "1.2.4",
+    "gulp-rename": "1.2.2",
+    "gulp-sass": "3.1.0",
+    "gulp-sourcemaps": "2.4.1",
+    "gulp-string-replace": "0.4.0",
+    "gulp-tslint": "7.1.0",
+    "gulp-typescript": "3.1.5",
+    "gulp-typings": "2.0.4",
+    "gulp-uglify": "2.0.1",
+    "gulp-wait": "0.0.2",
+    "html-loader": "0.4.5",
+    "html-minifier": "3.4.0",
+    "html-webpack-plugin": "2.28.0",
+    "husky": "0.13.1",
+    "imports-loader": "0.7.1",
+    "istanbul-instrumenter-loader": "2.0.0",
+    "jasmine-core": "2.5.2",
+    "json-loader": "0.5.4",
+    "json-stringify": "1.0.0",
+    "karma": "1.5.0",
     "karma-chrome-launcher": "2.0.0",
     "karma-cli": "1.0.1",
     "karma-coverage": "1.1.1",
-    "karma-jasmine": "1.0.2",
+    "karma-htmlfile-reporter": "0.3.5",
+    "karma-jasmine": "1.1.0",
     "karma-jasmine-html-reporter": "0.2.2",
-    "karma-mocha-reporter": "2.0.0",
+    "karma-mocha-reporter": "2.2.2",
     "karma-phantomjs-launcher": "1.0.2",
-    "karma-remap-coverage": "0.1.1",
     "karma-sourcemap-loader": "0.3.7",
-    "karma-webpack": "1.8.0",
-    "ngx-login-client": "0.1.3",
-    "npm-run-all": "2.2.0",
-    "opt-cli": "1.4.2",
-    "reflect-metadata": "0.1.8",
-    "rimraf": "2.5.4",
-    "rollup": "^0.37.0",
-    "rxjs": "5.0.0-beta.12",
-    "semantic-release": "^6.3.2",
-    "source-map-loader": "0.1.5",
-    "ts-helpers": "1.1.1",
-    "ts-loader": "0.8.1",
-    "tslint": "^3.15.1",
-    "tslint-loader": "2.1.5",
-    "typedoc": "^0.5.1",
-    "typescript": "2.0.8",
-    "uglify-js": "^2.7.5",
-    "validate-commit-msg": "^2.11.1",
-    "webpack": "2.1.0-beta.22",
-    "webpack-dashboard": "^0.2.0",
-    "webpack-dev-middleware": "1.7.0",
-    "webpack-dev-server": "2.1.0-beta.0",
-    "webpack-md5-hash": "^0.0.5",
-    "webpack-merge": "^0.14.0",
-    "webpack-validator": "2.1.3",
-    "zone.js": "^0.6.26"
+    "karma-webpack": "2.0.2",
+    "mocha": "3.2.0",
+    "moment": "2.17.1",
+    "ng2-bootstrap": "1.3.3",
+    "ng2-dropdown": "0.0.21",
+    "ng-router-loader": "2.1.0",
+    "node-sass": "4.5.0",
+    "npm-run-all": "4.0.2",
+    "null-loader": "0.1.1",
+    "opt-cli": "1.5.1",
+    "optimize-js-plugin": "0.0.4",
+    "parse5": "2.2.3",
+    "phantomjs-prebuilt": "2.1.14",
+    "postcss-loader": "1.3.3",
+    "precss": "1.4.0",
+    "protractor": "5.1.1",
+    "raw-loader": "0.5.1",
+    "reflect-metadata": "0.1.10",
+    "resolve-url-loader": "2.0.1",
+    "rimraf": "2.6.1",
+    "rollup": "0.41.4",
+    "rollup-plugin-angular-aot": "0.0.4",
+    "run-sequence": "1.2.2",
+    "rxjs": "5.0.1",
+    "sass-loader": "6.0.2",
+    "script-ext-html-webpack-plugin": "1.7.1",
+    "semantic-release": "6.3.2",
+    "source-map-loader": "0.1.6",
+    "string-replace-loader": "1.0.5",
+    "style-loader": "0.13.2",
+    "to-string-loader": "1.1.5",
+    "ts-helpers": "1.1.2",
+    "ts-loader": "2.0.1",
+    "ts-node": "2.1.0",
+    "tslint": "4.5.1",
+    "tslint-loader": "3.4.2",
+    "typedoc": "0.5.7",
+    "typescript": "2.1.6",
+    "uglify-js": "2.8.4",
+    "url-loader": "0.5.8",
+    "validate-commit-msg": "2.11.1",
+    "webpack": "2.2.1",
+    "webpack-bundle-analyzer": "2.3.0",
+    "webpack-dashboard": "0.3.0",
+    "webpack-dev-middleware": "1.10.1",
+    "webpack-dev-server": "2.4.1",
+    "webpack-dll-bundles-plugin": "1.0.0-beta.5",
+    "webpack-md5-hash": "0.0.5",
+    "webpack-merge": "3.0.0",
+    "webpack-validator": "2.3.0",
+    "zone.js": "0.7.7"
   },
   "release": {
     "branch": "master",
