--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     "noEmitHelpers": true,
     "strictNullChecks": false,
     "noImplicitAny": true,
+    "allowUnreachableCode": false,
     "baseUrl": ".",
     "rootDir": ".",
     "outDir": "dist",
@@ -42,7 +43,8 @@
   },
   "angularCompilerOptions": {
     "strictMetadataEmit": true,
-    "skipTemplateCodegen": true
+    "skipTemplateCodegen": true,
+    "genDir": "compiled"
   },
   "compileOnSave": false,
   "buildOnSave": false,
