--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
   "module": "index.js",
   "typings": "index.d.ts",
   "scripts": {
-    "build": "npm-run-all remove-dist transpile bundle-rollup minify  copy-files",
+    "build": "npm run remove-dist && npm run bundle && npm run build:library",
+    "build:library": "gulp build-library",
     "build:components": "npm-run-all remove-dist bundle minify prebuild:add-require transpile-sass transpile copy-files postbuild:remove-require",
     "bundle": "webpack --config config/webpack.prod.js --progress --profile --bail",
     "bundle-rollup": "rollup -c",
+    "clean-dist": "rimraf dist dist-watch",
     "clean": "npm cache clean && npm run rimraf -- node_modules doc coverage dist bundles",
     "cleanup": "rimraf dist/package.json dist/bundles dist/src dist/index.d.ts dist/index.metadata.json dist/index.js dist/index.js.map dist/LICENSE dist/README.md",
-    "commitmsg": "validate-commit-msg",
-    "copy-files": "copyfiles LICENSE README.md package.json dist && copyfiles src/**/*.css dist && copyfiles src/**/**/*.css dist && copyfiles src/**/*.html dist && copyfiles src/**/**/*.html dist",
+    "copy-files": "gulp copyfiles",
     "copy-dist-files": "copyfiles LICENSE README.md package.json index.js dist",
     "minify": "uglifyjs dist/bundles/ngx-fabric8-wit.js --screw-ie8 --compress --mangle --comments --output dist/bundles/ngx-fabric8-wit.min.js",
     "prebuild:add-require": "gulp add-require-for-templates && gulp replace-html && gulp add-require-for-styles && gulp replace-scss",
@@ -26,7 +27,7 @@
     "test": "karma start",
     "transpile": "./node_modules/.bin/ngc",
     "semantic-release": "semantic-release pre && npm run build && cp -r .git dist && npm publish dist/ && semantic-release post",
-    "transpile-sass": "gulp compile-sass"
+    "watch:library": "gulp watch"
   },
   "license": "Apache-2.0",
   "contributors": [
@@ -103,6 +104,13 @@
     "copyfiles": "1.2.0",
     "core-js": "2.4.1",
     "cpy-cli": "1.0.1",
+    "gulp": "3.9.1",
+    "gulp-changed": "2.0.0",
+    "gulp-ngc": "0.2.0",
+    "gulp-sass": "3.1.0",
+    "gulp-sourcemaps": "2.4.1",
+    "gulp-string-replace": "0.4.0",
+    "gulp-uglify": "2.0.1",
     "cz-conventional-changelog": "2.0.0",
     "css-loader": "0.26.2",
     "css-to-string-loader": "0.1.2",
@@ -185,7 +193,6 @@
     "typescript": "2.1.6",
     "uglify-js": "2.8.7",
     "url-loader": "0.5.8",
-    "validate-commit-msg": "2.11.1",
     "webpack": "2.2.1",
     "webpack-bundle-analyzer": "2.3.0",
     "webpack-dashboard": "0.3.0",
