--- a/package.json
+++ b/package.json
@@ -126,6 +126,7 @@
     "gulp-typescript": "3.1.5",
     "gulp-typings": "2.0.4",
     "gulp-uglify": "2.0.1",
+    "gulp-util": "3.0.8",
     "gulp-wait": "0.0.2",
     "html-loader": "0.4.5",
     "html-minifier": "3.4.0",
