--- a/package.json
+++ b/package.json
@@ -73,7 +73,8 @@
     "@angular/core": "2.4.9",
     "@angular/http": "2.4.9",
     "lodash": "4.17.4",
-    "ngx-login-client": "0.5.1"
+    "ngx-base": "1.2.0",
+    "ngx-login-client": "0.6.5"
   },
   "peerDependencies": {},
   "devDependencies": {
