--- a/package.json
+++ b/package.json
@@ -201,6 +201,7 @@
   },
   "release": {
     "branch": "master",
+    "debug": false,
     "verifyConditions": {
       "path": "./node_modules/@krux/condition-jenkins"
     }
