--- a/package.json
+++ b/package.json
@@ -118,7 +118,7 @@
     "karma-chrome-launcher": "2.0.0",
     "karma-cli": "1.0.1",
     "karma-coverage": "1.1.1",
-    "karma-remap-coverage": "^0.1.4",
+    "karma-remap-coverage": "0.1.4",
     "karma-htmlfile-reporter": "0.3.5",
     "karma-jasmine": "1.1.0",
     "karma-jasmine-html-reporter": "0.2.2",
