--- a/package.json
+++ b/package.json
@@ -70,94 +70,94 @@
     "npm": ">= 3"
   },
   "dependencies": {
-    "@angular/core": "4.0.1",
-    "@angular/forms": "4.0.1",
-    "@angular/http": "4.0.1",
+    "@angular/core": "4.4.3",
+    "@angular/forms": "4.4.3",
+    "@angular/http": "4.4.3",
     "lodash": "4.17.4",
-    "ngx-base": "1.2.9",
-    "ngx-login-client": "0.6.32"
+    "ngx-base": "2.1.0",
+    "ngx-login-client": "1.1.5"
   },
   "peerDependencies": {},
   "devDependencies": {
-    "@angular/common": "4.0.1",
-    "@angular/compiler": "4.0.1",
-    "@angular/compiler-cli": "4.0.1",
-    "@angular/platform-browser": "4.0.1",
-    "@angular/platform-browser-dynamic": "4.0.1",
-    "@angular/router": "4.0.1",
+    "@angular/common": "4.4.3",
+    "@angular/compiler": "4.4.3",
+    "@angular/compiler-cli": "4.4.3",
+    "@angular/platform-browser": "4.4.3",
+    "@angular/platform-browser-dynamic": "4.4.3",
+    "@angular/router": "4.4.3",
     "@krux/condition-jenkins": "1.0.1",
-    "@types/jasmine": "2.5.47",
-    "@types/lodash": "4.14.61",
+    "@types/jasmine": "2.6.0",
+    "@types/lodash": "4.14.76",
     "angular2-template-loader": "0.6.2",
-    "awesome-typescript-loader": "3.1.2",
+    "awesome-typescript-loader": "3.2.3",
     "child_process": "1.0.2",
-    "clean-webpack-plugin": "0.1.16",
-    "codelyzer": "3.0.0-beta.4",
+    "clean-webpack-plugin": "0.1.17",
+    "codelyzer": "3.2.0",
     "copy-webpack-plugin": "4.0.1",
     "copyfiles": "1.2.0",
-    "core-js": "2.4.1",
+    "core-js": "2.5.1",
     "cz-conventional-changelog": "2.0.0",
-    "css-loader": "0.28.0",
-    "del": "2.2.2",
-    "extract-text-webpack-plugin": "2.1.0",
-    "file-loader": "0.11.0",
+    "css-loader": "0.28.7",
+    "del": "3.0.0",
+    "extract-text-webpack-plugin": "3.0.0",
+    "file-loader": "0.11.2",
     "gulp": "3.9.1",
-    "gulp-changed": "2.0.0",
-    "gulp-ngc": "0.2.0",
-    "gulp-sourcemaps": "2.5.0",
+    "gulp-changed": "3.1.0",
+    "gulp-ngc": "0.3.2",
+    "gulp-sourcemaps": "2.6.1",
     "gulp-string-replace": "0.4.0",
     "gulp-util": "3.0.8",
-    "html-loader": "0.4.5",
-    "html-webpack-plugin": "2.28.0",
-    "husky": "0.13.3",
-    "istanbul-instrumenter-loader": "2.0.0",
-    "jasmine-core": "2.5.2",
-    "json-loader": "0.5.4",
+    "html-loader": "0.5.1",
+    "html-webpack-plugin": "2.30.1",
+    "husky": "0.14.3",
+    "istanbul-instrumenter-loader": "3.0.0",
+    "jasmine-core": "2.8.0",
+    "json-loader": "0.5.7",
     "json-stringify": "1.0.0",
-    "karma": "1.5.0",
-    "karma-chrome-launcher": "2.0.0",
+    "karma": "1.7.1",
+    "karma-chrome-launcher": "2.2.0",
     "karma-cli": "1.0.1",
     "karma-coverage": "1.1.1",
     "karma-remap-coverage": "0.1.4",
     "karma-htmlfile-reporter": "0.3.5",
     "karma-jasmine": "1.1.0",
     "karma-jasmine-html-reporter": "0.2.2",
-    "karma-mocha-reporter": "2.2.3",
+    "karma-mocha-reporter": "2.2.4",
     "karma-phantomjs-launcher": "1.0.4",
     "karma-sourcemap-loader": "0.3.7",
-    "karma-webpack": "2.0.3",
-    "mocha": "3.2.0",
+    "karma-webpack": "2.0.4",
+    "mocha": "3.5.3",
     "npm-run-all": "4.0.2",
     "optimize-js-plugin": "0.0.4",
-    "phantomjs-prebuilt": "2.1.14",
-    "protractor": "5.1.1",
+    "phantomjs-prebuilt": "2.1.15",
+    "protractor": "5.1.2",
     "raw-loader": "0.5.1",
     "reflect-metadata": "0.1.10",
-    "rimraf": "2.6.1",
-    "rollup": "0.41.6",
+    "rimraf": "2.6.2",
+    "rollup": "0.50.0",
     "rollup-plugin-angular-aot": "0.0.4",
-    "run-sequence": "1.2.2",
-    "rxjs": "5.2.0",
-    "sass-loader": "6.0.3",
-    "semantic-release": "6.3.2",
+    "run-sequence": "2.2.0",
+    "rxjs": "5.4.3",
+    "sass-loader": "6.0.6",
+    "semantic-release": "7.0.2",
     "source-map-loader": "0.2.1",
     "to-string-loader": "1.1.5",
     "ts-helpers": "1.1.2",
-    "ts-node": "3.0.2",
-    "tslint": "5.0.0",
-    "tslint-loader": "3.4.3",
-    "typedoc": "0.5.9",
-    "typescript": "2.2.2",
-    "uglify-js": "2.8.20",
-    "webpack": "2.3.2",
-    "webpack-bundle-analyzer": "2.3.1",
-    "webpack-dashboard": "0.3.0",
-    "webpack-dev-middleware": "1.10.1",
-    "webpack-dev-server": "2.4.2",
+    "ts-node": "3.3.0",
+    "tslint": "5.7.0",
+    "tslint-loader": "3.5.3",
+    "typedoc": "0.8.0",
+    "typescript": "2.5.3",
+    "uglify-js": "3.1.2",
+    "webpack": "3.6.0",
+    "webpack-bundle-analyzer": "2.9.0",
+    "webpack-dashboard": "1.0.0-5",
+    "webpack-dev-middleware": "1.12.0",
+    "webpack-dev-server": "2.8.2",
     "webpack-dll-bundles-plugin": "1.0.0-beta.5",
     "webpack-md5-hash": "0.0.5",
     "webpack-merge": "4.1.0",
-    "zone.js": "0.8.5"
+    "zone.js": "0.8.17"
   },
   "release": {
     "branch": "master",
