--- a/package.json
+++ b/package.json
@@ -126,7 +126,7 @@
     "karma-mocha-reporter": "2.2.4",
     "karma-phantomjs-launcher": "1.0.4",
     "karma-sourcemap-loader": "0.3.7",
-    "karma-webpack": "2.0.4",
+    "karma-webpack": "^2.0.5",
     "mocha": "4.0.1",
     "npm-run-all": "4.0.2",
     "optimize-js-plugin": "0.0.4",
