--- a/package.json
+++ b/package.json
@@ -150,7 +150,7 @@
     "typedoc": "0.9.0",
     "typescript": "2.5.3",
     "uglify-js": "3.1.3",
-    "webpack": "3.6.0",
+    "webpack": "^3.7.1",
     "webpack-bundle-analyzer": "2.9.0",
     "webpack-dashboard": "1.0.0-5",
     "webpack-dev-middleware": "1.12.0",
