--- a/package.json
+++ b/package.json
@@ -86,23 +86,23 @@
     "@angular/platform-browser-dynamic": "^4.4.0",
     "@angular/router": "^4.4.0",
     "@krux/condition-jenkins": "1.0.1",
-    "@types/jasmine": "2.6.0",
-    "@types/lodash": "4.14.77",
+    "@types/jasmine": "2.6.2",
+    "@types/lodash": "4.14.80",
     "angular2-template-loader": "0.6.2",
     "awesome-typescript-loader": "3.2.3",
     "child_process": "1.0.2",
     "clean-webpack-plugin": "0.1.17",
-    "codelyzer": "3.2.1",
-    "copy-webpack-plugin": "4.1.1",
+    "codelyzer": "3.2.2",
+    "copy-webpack-plugin": "4.2.0",
     "copyfiles": "1.2.0",
     "core-js": "2.5.1",
-    "cz-conventional-changelog": "2.0.0",
+    "cz-conventional-changelog": "2.1.0",
     "css-loader": "0.28.7",
     "del": "3.0.0",
-    "extract-text-webpack-plugin": "3.0.1",
+    "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
     "gulp": "3.9.1",
-    "gulp-changed": "3.1.0",
+    "gulp-changed": "3.1.1",
     "gulp-ngc": "0.3.2",
     "gulp-sourcemaps": "2.6.1",
     "gulp-string-replace": "0.4.0",
@@ -122,38 +122,38 @@
     "karma-htmlfile-reporter": "0.3.5",
     "karma-jasmine": "1.1.0",
     "karma-jasmine-html-reporter": "0.2.2",
-    "karma-mocha-reporter": "2.2.4",
+    "karma-mocha-reporter": "2.2.5",
     "karma-phantomjs-launcher": "1.0.4",
     "karma-sourcemap-loader": "0.3.7",
     "karma-webpack": "2.0.5",
     "mocha": "4.0.1",
-    "npm-run-all": "4.0.2",
+    "npm-run-all": "4.1.1",
     "optimize-js-plugin": "0.0.4",
     "phantomjs-prebuilt": "2.1.15",
-    "protractor": "5.1.2",
+    "protractor": "5.2.0",
     "raw-loader": "0.5.1",
     "reflect-metadata": "0.1.10",
     "rimraf": "2.6.2",
     "rollup": "0.50.0",
     "rollup-plugin-angular-aot": "0.0.4",
     "run-sequence": "2.2.0",
-    "rxjs": "5.4.3",
+    "rxjs": "5.5.2",
     "sass-loader": "6.0.6",
-    "semantic-release": "=7.0.2",
-    "source-map-loader": "0.2.2",
+    "semantic-release": "8.2.0",
+    "source-map-loader": "0.2.3",
     "to-string-loader": "1.1.5",
     "ts-helpers": "1.1.2",
     "ts-node": "3.3.0",
-    "tslint": "5.7.0",
+    "tslint": "5.8.0",
     "tslint-loader": "3.5.3",
     "typedoc": "0.9.0",
     "typescript": "2.5.3",
-    "uglify-js": "3.1.3",
-    "webpack": "3.7.1",
+    "uglify-js": "3.1.6",
+    "webpack": "3.8.1",
     "webpack-bundle-analyzer": "2.9.0",
     "webpack-dashboard": "1.0.0",
     "webpack-dev-middleware": "1.12.0",
-    "webpack-dev-server": "2.9.1",
+    "webpack-dev-server": "2.9.3",
     "webpack-dll-bundles-plugin": "1.0.0-beta.5",
     "webpack-md5-hash": "0.0.5",
     "webpack-merge": "4.1.0",
