--- a/package.json
+++ b/package.json
@@ -61,21 +61,25 @@
     "npm": ">= 5.3.0"
   },
   "dependencies": {
-    "@angular/core": "^4.4.0",
-    "@angular/forms": "^4.4.0",
-    "@angular/http": "^4.4.0",
-    "lodash": "^4.17.4",
+    "lodash": "^4.17.4"
+  },
+  "peerDependencies": {
+    "@angular/core": "^4.4.6",
+    "@angular/forms": "^4.4.6",
+    "@angular/http": "^4.4.6",
     "ngx-base": "^2.3.0",
     "ngx-login-client": "^1.2.0"
   },
-  "peerDependencies": {},
   "devDependencies": {
-    "@angular/common": "^4.4.0",
-    "@angular/compiler": "^4.4.0",
-    "@angular/compiler-cli": "^4.4.0",
-    "@angular/platform-browser": "^4.4.0",
-    "@angular/platform-browser-dynamic": "^4.4.0",
-    "@angular/router": "^4.4.0",
+    "@angular/common": "^4.4.6",
+    "@angular/compiler": "^4.4.6",
+    "@angular/compiler-cli": "^4.4.6",
+    "@angular/core": "^4.4.6",
+    "@angular/forms": "^4.4.6",
+    "@angular/http": "^4.4.6",
+    "@angular/platform-browser": "^4.4.6",
+    "@angular/platform-browser-dynamic": "^4.4.6",
+    "@angular/router": "^4.4.6",
     "@krux/condition-jenkins": "1.0.1",
     "@types/core-js": "0.9.43",
     "@types/jasmine": "2.6.2",
@@ -143,6 +147,8 @@
     "less-plugin-autoprefix": "1.5.1",
     "mocha": "4.0.1",
     "ng-router-loader": "2.1.0",
+    "ngx-base": "^2.3.0",
+    "ngx-login-client": "^1.2.0",
     "npm-run-all": "4.1.1",
     "null-loader": "0.1.1",
     "opt-cli": "1.6.0",
