--- a/package.json
+++ b/package.json
@@ -64,22 +64,22 @@
     "lodash": "^4.17.4"
   },
   "peerDependencies": {
-    "@angular/core": "^4.4.6",
-    "@angular/forms": "^4.4.6",
-    "@angular/http": "^4.4.6",
+    "@angular/core": "^6.1.1",
+    "@angular/forms": "^6.1.1",
+    "@angular/http": "^6.1.1",
     "ngx-base": "^2.3.0",
     "ngx-login-client": "^1.2.0"
   },
   "devDependencies": {
-    "@angular/common": "^4.4.6",
-    "@angular/compiler": "^4.4.6",
-    "@angular/compiler-cli": "^4.4.6",
-    "@angular/core": "^4.4.6",
-    "@angular/forms": "^4.4.6",
-    "@angular/http": "^4.4.6",
-    "@angular/platform-browser": "^4.4.6",
-    "@angular/platform-browser-dynamic": "^4.4.6",
-    "@angular/router": "^4.4.6",
+    "@angular/common": "6.1.1",
+    "@angular/compiler": "6.1.1",
+    "@angular/compiler-cli": "6.1.1",
+    "@angular/core": "6.1.1",
+    "@angular/forms": "6.1.1",
+    "@angular/http": "6.1.1",
+    "@angular/platform-browser": "6.1.1",
+    "@angular/platform-browser-dynamic": "6.1.1",
+    "@angular/router": "6.1.1",
     "@krux/condition-jenkins": "1.0.1",
     "@types/core-js": "0.9.43",
     "@types/jasmine": "2.6.2",
