fix(package): upgrade karma-webpack to 4.0.0-beta.0

--- a/package.json
+++ b/package.json
@@ -141,7 +141,7 @@
     "karma-phantomjs-launcher": "1.0.4",
     "karma-safari-launcher": "1.0.0",
     "karma-sourcemap-loader": "0.3.7",
-    "karma-webpack": "3.0.0",
+    "karma-webpack": "4.0.0-beta.0",
     "less": "3.8.0",
     "less-loader": "4.1.0",
     "less-plugin-autoprefix": "2.0.0",
