--- a/package.json
+++ b/package.json
@@ -133,14 +133,17 @@
     "karma-cli": "1.0.1",
     "karma-coverage": "1.1.2",
     "karma-firefox-launcher": "1.1.0",
-    "karma-remap-coverage": "0.1.5",
     "karma-htmlfile-reporter": "0.3.5",
     "karma-jasmine": "1.1.2",
     "karma-jasmine-html-reporter": "1.2.0",
+    "karma-mocha": "1.3.0",
     "karma-mocha-reporter": "2.2.5",
     "karma-phantomjs-launcher": "1.0.4",
+    "karma-remap-coverage": "0.1.5",
+    "karma-remap-istanbul": "0.6.0",
     "karma-safari-launcher": "1.0.0",
     "karma-sourcemap-loader": "0.3.7",
+    "karma-typescript": "3.0.13",
     "karma-webpack": "4.0.0-beta.0",
     "less": "3.8.0",
     "less-loader": "4.1.0",
