--- a/package.json
+++ b/package.json
@@ -89,7 +89,6 @@
     "angular2-template-loader": "0.6.2",
     "assets-webpack-plugin": "3.9.3",
     "autoprefixer": "9.1.0",
-    "awesome-typescript-loader": "5.2.0",
     "child_process": "1.0.2",
     "clean-css": "4.2.1",
     "clean-webpack-plugin": "0.1.19",
@@ -183,6 +182,7 @@
     "stylus": "0.54.5",
     "to-string-loader": "1.1.5",
     "ts-helpers": "1.1.2",
+    "ts-loader": "4.4.2",
     "ts-node": "7.0.0",
     "tslint": "5.11.0",
     "tslint-loader": "3.6.0",
