--- a/package.json
+++ b/package.json
@@ -192,6 +192,7 @@
     "url-loader": "1.0.1",
     "webpack": "4.16.5",
     "webpack-bundle-analyzer": "2.13.1",
+    "webpack-cli": "3.1.0",
     "webpack-dev-middleware": "3.1.3",
     "webpack-dev-server": "3.1.5",
     "webpack-dll-bundles-plugin": "1.0.0-beta.5",
