feat(build): update gulp build and test configs

--- a/package.json
+++ b/package.json
@@ -6,21 +6,29 @@
   "module": "index.js",
   "typings": "index.d.ts",
   "scripts": {
-    "build": "npm run remove-dist && npm run build:library",
-    "build:library": "gulp build-library",
+    "build": "npm-run-all --serial lint:less lint:ts build:aot build:bundle",
+    "build:aot": "npm run rimraf -- build build-aot && gulp build-aot",
+    "build:bundle": "npm-run-all --serial build:library",
+    "build:demo": "npm-run-all --serial 'rimraf -- dist-demo' demo:copy-examples demo:webpack",
+    "build:library": "npm run rimraf -- build dist dist-watch src/**/*.css && gulp build",
     "clean": "npm cache clear --force && npm run rimraf -- package-lock.json node_modules doc coverage dist distwatch bundles",
+    "lint:less": "stylelint 'src/**/*.less' --config .stylelintrc",
+    "lint:less:fix": "npm run lint:less -- --fix",
+    "lint:ts": "tslint -c tslint.json 'src/**/*.ts'",
+    "lint:ts:fix": "npm run lint:ts -- --fix",
     "minify": "uglifyjs dist/bundles/ngx-widgets.js --screw-ie8 --compress --mangle --comments --output dist/bundles/ngx-widgets.min.js",
     "perf": "webpack --config config/webpack.perf.js --progress --profile",
     "reinstall": "npm run clean && npm install",
     "remove-dist": "rimraf dist dist-watch",
     "rimraf": "rimraf",
-    "semantic-release": "semantic-release pre && npm run build && cp -r .git dist && npm publish dist/ && semantic-release post",
+    "semantic-release": "semantic-release",
     "start": "webpack-dev-server --config config/webpack.demo.js --progress --host 0.0.0.0 --port 3001 --profile --watch --content-base src/",
     "test": "npm run test:unit",
     "test:unit": "karma start",
     "test:debug": "karma start --no-single-run --browsers Chrome",
     "test:browsers": "karma start --browsers Chrome,Firefox,Safari",
     "transpile": "gulp transpile",
+    "transpile-less": "gulp transpile-less",
     "watch:library": "gulp watch"
   },
   "license": "Apache-2.0",
@@ -82,6 +90,7 @@
     "@angular/platform-browser-dynamic": "6.1.6",
     "@angular/router": "6.1.6",
     "@krux/condition-jenkins": "1.0.1",
+    "@ngtools/webpack": "6.1.4",
     "@types/core-js": "2.5.0",
     "@types/jasmine": "2.8.8",
     "@types/lodash": "4.14.116",
@@ -105,19 +114,19 @@
     "eslint": "5.4.0",
     "exports-loader": "0.7.0",
     "expose-loader": "0.7.5",
-    "extract-text-webpack-plugin": "3.0.2",
+    "extract-text-webpack-plugin": "4.0.0-beta.0",
     "file-loader": "2.0.0",
     "gh-pages": "1.2.0",
-    "gulp": "3.9.1",
+    "gulp": "4.0.0",
     "gulp-changed": "3.2.0",
     "gulp-cssmin": "0.2.0",
     "gulp-less": "4.0.1",
     "gulp-ngc": "0.2.1",
+    "gulp-rename": "1.4.0",
+    "gulp-replace": "1.0.0",
     "gulp-sourcemaps": "2.6.4",
     "gulp-string-replace": "1.1.1",
     "gulp-stylelint": "7.0.0",
-    "gulp-uglify": "3.0.1",
-    "gulp-util": "3.0.8",
     "html-loader": "0.5.5",
     "html-minifier": "3.5.20",
     "html-webpack-plugin": "3.2.0",
@@ -149,6 +158,8 @@
     "less": "3.8.1",
     "less-loader": "4.1.0",
     "less-plugin-autoprefix": "2.0.0",
+    "markdown-it": "8.4.2",
+    "mini-css-extract-plugin": "0.4.2",
     "mocha": "5.2.0",
     "ng-router-loader": "2.1.0",
     "ngx-base": "^3.2.1",
@@ -168,8 +179,6 @@
     "reflect-metadata": "0.1.12",
     "resolve-url-loader": "2.3.0",
     "rimraf": "2.6.2",
-    "rollup": "0.65.0",
-    "rollup-plugin-angular-aot": "0.0.4",
     "run-sequence": "2.2.1",
     "rxjs": "6.3.0",
     "rxjs-compat": "6.3.0",
@@ -177,6 +186,7 @@
     "script-ext-html-webpack-plugin": "2.0.1",
     "semantic-release": "15.9.12",
     "source-map-loader": "0.2.4",
+    "string-replace-loader": "2.1.1",
     "style-loader": "0.23.0",
     "stylelint": "9.5.0",
     "stylelint-webpack-plugin": "0.10.5",
@@ -188,8 +198,8 @@
     "tslint": "5.11.0",
     "tslint-loader": "3.6.0",
     "typedoc": "0.12.0",
+    "typedoc-webpack-plugin": "1.1.4",
     "typescript": "2.9.2",
-    "uglify-js": "3.4.8",
     "url-loader": "1.1.1",
     "webpack": "4.17.1",
     "webpack-bundle-analyzer": "2.13.1",
@@ -203,10 +213,8 @@
   },
   "release": {
     "branch": "master",
-    "debug": false,
-    "verifyConditions": {
-      "path": "./node_modules/@krux/condition-jenkins"
-    }
+    "debug": "true",
+    "pkgRoot": "dist"
   },
   "config": {
     "commitizen": {
