--- a/package.json
+++ b/package.json
@@ -180,8 +180,8 @@
     "resolve-url-loader": "2.3.0",
     "rimraf": "2.6.2",
     "run-sequence": "2.2.1",
-    "rxjs": "6.3.0",
-    "rxjs-compat": "6.3.0",
+    "rxjs": "^6.3.0",
+    "rxjs-compat": "^6.3.0",
     "rxjs-tslint": "0.1.5",
     "script-ext-html-webpack-plugin": "2.0.1",
     "semantic-release": "15.9.12",
